--- a/.gitignore
+++ b/.gitignore
@@ -81,6 +81,9 @@ local.properties
 *.tar.gz
 *.rar
 
+# avoid uploading chromeDriver.exe #
+*.exe
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
